# dualxda-pip

./: LICENSE  README.md  pyproject.toml  requirements.txt
dualxda/: dualda.py
dualxda-package/: test_attribution.py  test_xda.py
dualxda-package/dualda/: dualda.py  feature_dataset.py
dualxda-package/dualxda/: dualda.py  utils.py
dualxda-package/models/: models.py
dualxda-package/test/: MNIST.py  MNIST_test_ids  MNIST_val_ids
